feat: refactor some things
